refactor: simplify assertions in JoinHouseholdRequestRepoTest